--- a/usr/share/novnc/index.html
+++ b/usr/share/novnc/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>soulseek-docker</title>
+    <title>Nicotine</title>
     <link rel="icon" href="app/images/soulseek.png" />
     <style>
       html,
